crates/norito_derive/tests/ui/fail/json_enum_missing_tag.rs
use norito::derive::{JsonDeserialize, JsonSerialize};

#[derive(JsonSerialize, JsonDeserialize)]
enum NoTag {
    Unit,
}

fn main() {}
